--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-native-vector-icons": "^5.0.0",
     "react-navigation": "^2.12.0",
     "react-redux": "^5.0.7",
+    "redux": "^4.0.0",
     "redux-actions": "^2.6.1"
   },
   "devDependencies": {
